--- a/.github/workflows/commit-tests.yml
+++ b/.github/workflows/commit-tests.yml
@@ -10,6 +10,8 @@ env:
 jobs:
   parse-commit:
     runs-on: ubuntu-latest
+    # if the commit message does not contain {craft} or {bash} tags, then skip the craft-test and bash-test jobs
+    if: github.event_name == 'push' && (contains(github.event.head_commit.message, '{craft}') || contains(github.event.head_commit.message, '{bash}'))
     outputs:
       skip_craft: ${{ steps.parse_commit.outputs.skip_craft }}
       craft: ${{ steps.parse_commit.outputs.craft }}
