--- a/.github/workflows/ext-matrix-tests.yml
+++ b/.github/workflows/ext-matrix-tests.yml
@@ -1,27 +1,14 @@
 name: "Extension matrix tests"
 
-
-# Only run if:
-# - the workflow is manually triggered
-# - or a pull request is made to the main branch that modifies this workflow file or commit message contains "fix" or "test"
 on:
-    workflow_dispatch:
-    pull_request:
-        branches: [ "main" ]
-        paths:
-        - '.github/workflows/ext-matrix-tests.yml'
-        - 'src/**'
-        - 'config/**'
-        - 'bin/**'
-        - 'composer.json'
-        - 'box.json'
-        - '.php-cs-fixer.php'
+  workflow_dispatch:
+  push:
 
 jobs:
   test:
     name: "${{ matrix.extension }} (PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }})"
     runs-on: ${{ matrix.operating-system }}
-    if: github.event_name == 'push' && (contains(github.event.head_commit.message, 'fix') || contains(github.event.head_commit.message, 'test'))
+    if: contains(github.event.head_commit.message, 'extension test')
     strategy:
       fail-fast: false
       matrix:
