run go mod frankenphp automatically when running craft

--- a/config/env.ini
+++ b/config/env.ini
@@ -69,7 +69,7 @@ SPC_LIBC=musl
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
 AR=${SPC_LINUX_DEFAULT_AR}
-LD=ld.gold
+LD=${SPC_LINUX_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fPIC -Os"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
