--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -116,7 +116,7 @@ jobs:
             linux-x86_64)
               DOWN_CMD="./bin/spc-alpine-docker download"
               BUILD_CMD="./bin/spc-alpine-docker build"
-              RUNS_ON="ubuntu-latest"
+              RUNS_ON="ubuntu-24.04"
               ;;
             linux-aarch64)
               DOWN_CMD="./bin/spc-alpine-docker download"
@@ -136,7 +136,7 @@ jobs:
             macos-x86_64)
               DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc doctor --auto-fix && ./bin/spc download"
               BUILD_CMD="./bin/spc build"
-              RUNS_ON="macos-13"
+              RUNS_ON="macos-14"
               ;;
             macos-aarch64)
               DOWN_CMD="composer update --no-dev --classmap-authoritative && ./bin/spc doctor --auto-fix && ./bin/spc download"
