--- a/config/env.ini
+++ b/config/env.ini
@@ -63,13 +63,11 @@ UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
 
 [linux]
-; include PATH for musl libc.
-SPC_LIBC=musl
 ; compiler environments
-CC=${SPC_LINUX_DEFAULT_CC}
-CXX=${SPC_LINUX_DEFAULT_CXX}
-AR=${SPC_LINUX_DEFAULT_AR}
-LD=${SPC_LINUX_DEFAULT_LD}
+CC=gcc
+CXX=g++
+AR=ar
+LD=ld
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fPIC -Os"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
@@ -78,7 +76,7 @@ SPC_EXTRA_LIBS=
 ; upx executable path
 UPX_EXEC=${PKG_ROOT_PATH}/bin/upx
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
-SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream
+SPC_MICRO_PATCHES=cli_checks,disable_huge_page,zend_stream
 
 ; *** default build command for building php ***
 ; buildconf command
