swoole has date time conversion error in c++ code, clang needs -lunwind

--- a/config/env.ini
+++ b/config/env.ini
@@ -72,7 +72,7 @@ AR=${SPC_LINUX_DEFAULT_AR}
 LD=${SPC_LINUX_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="-fPIC -Os -Wno-error=date-time -fno-sanitize=undefined"
-SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
+SPC_DEFAULT_CXX_FLAGS="-fPIC -Os -Wno-error=date-time"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
 ; upx executable path
@@ -96,7 +96,7 @@ SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -fPIE"
 ; CPPFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="-I${BUILD_INCLUDE_PATH}"
 ; LDFLAGS for configuring php
-SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
+SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH} -L/usr/lib64"
 ; LIBS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LIBS="-ldl -lrt -lpthread -lm -lresolv -lutil"
 ; EXTRA_CFLAGS for `make` php
