we manage -fno-sanitize in code, only needed for opcache with jit

--- a/config/env.ini
+++ b/config/env.ini
@@ -71,7 +71,7 @@ CXX=${SPC_LINUX_DEFAULT_CXX}
 AR=${SPC_LINUX_DEFAULT_AR}
 LD=${SPC_LINUX_DEFAULT_LD}
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
-SPC_DEFAULT_C_FLAGS="-fPIC -Os -Wno-error=date-time -fno-sanitize=undefined"
+SPC_DEFAULT_C_FLAGS="-fPIC -Os -Wno-error=date-time"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os -Wno-error=date-time"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
