--- a/config/env.ini
+++ b/config/env.ini
@@ -55,6 +55,8 @@ SPC_CMD_VAR_FRANKENPHP_XCADDY_MODULES="--with github.com/dunglas/frankenphp/cadd
 ; EXTENSION_DIR=
 
 [windows]
+; build target: win7-static
+SPC_TARGET=msvc-static
 ; php-sdk-binary-tools path
 PHP_SDK_PATH="${WORKING_DIR}\php-sdk-binary-tools"
 ; upx executable path
@@ -63,8 +65,17 @@ UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
 
 [linux]
-; include PATH for musl libc.
-SPC_LIBC=musl
+; Linux can use different build toolchain, but the toolchain can not be changed in this file:
+; - musl (default): used for general linux distros, can build `musl-static` target only.
+; - zig (WIP): used for general linux distros, can build `musl` and `glibc` targets.
+; - musl-native: used for alpine linux, can build `musl-static` and `musl`(WIP) target.
+; - gnu-native (assume): used for general linux distros, can build `glibc` target only and have portability issues.
+
+; build target:
+; - musl-static (default): pure static linking, using musl-libc, can run on any linux distro.
+; - musl: static linking with dynamic linking to musl-libc, can run on musl-based linux distro.
+; - glibc: static linking with dynamic linking to glibc, can run on glibc-based linux distro.
+SPC_TARGET=musl-static
 ; compiler environments
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
@@ -109,6 +120,9 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS=""
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 
 [macos]
+; build target: macho or macho (possibly we could support macho-universal in the future)
+; Currently we do not support universal and cross-compilation for macOS.
+SPC_TARGET=macho
 ; compiler environments
 CC=clang
 CXX=clang++
