--- a/config/env.ini
+++ b/config/env.ini
@@ -56,7 +56,7 @@ SPC_CMD_VAR_FRANKENPHP_XCADDY_MODULES="--with github.com/dunglas/frankenphp/cadd
 
 [windows]
 ; build target: win7-static
-SPC_TARGET=msvc-static
+SPC_TARGET=native
 ; php-sdk-binary-tools path
 PHP_SDK_PATH="${WORKING_DIR}\php-sdk-binary-tools"
 ; upx executable path
@@ -75,7 +75,9 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 ; - musl-static (default): pure static linking, using musl-libc, can run on any linux distro.
 ; - musl: static linking with dynamic linking to musl-libc, can run on musl-based linux distro.
 ; - glibc: static linking with dynamic linking to glibc, can run on glibc-based linux distro.
-SPC_TARGET=musl-static
+
+; include PATH for musl libc.
+SPC_LIBC=musl
 ; compiler environments
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
@@ -122,7 +124,7 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 [macos]
 ; build target: macho or macho (possibly we could support macho-universal in the future)
 ; Currently we do not support universal and cross-compilation for macOS.
-SPC_TARGET=macho
+SPC_TARGET=native
 ; compiler environments
 CC=clang
 CXX=clang++
