--- a/config/env.ini
+++ b/config/env.ini
@@ -56,7 +56,7 @@ SPC_CMD_VAR_FRANKENPHP_XCADDY_MODULES="--with github.com/dunglas/frankenphp/cadd
 
 [windows]
 ; build target: win7-static
-SPC_TARGET=native
+SPC_TARGET=native-windows
 ; php-sdk-binary-tools path
 PHP_SDK_PATH="${WORKING_DIR}\php-sdk-binary-tools"
 ; upx executable path
@@ -124,7 +124,7 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 [macos]
 ; build target: macho or macho (possibly we could support macho-universal in the future)
 ; Currently we do not support universal and cross-compilation for macOS.
-SPC_TARGET=native
+SPC_TARGET=native-macos
 ; compiler environments
 CC=clang
 CXX=clang++
