support for dynamic linking of musl libc

--- a/config/env.ini
+++ b/config/env.ini
@@ -65,6 +65,8 @@ SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime
 [linux]
 ; include PATH for musl libc.
 SPC_LIBC=musl
+SPC_LIBC_VERSION=
+SPC_LIBC_LINKAGE=-static
 ; compiler environments
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
