--- a/config/env.ini
+++ b/config/env.ini
@@ -91,7 +91,7 @@ SPC_EXTRA_LIBS=
 ; upx executable path
 UPX_EXEC=${PKG_ROOT_PATH}/bin/upx
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
-SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream
+SPC_MICRO_PATCHES=cli_checks,disable_huge_page
 
 ; *** default build command for building php ***
 ; buildconf command
@@ -134,7 +134,7 @@ SPC_DEFAULT_CXX_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
 SPC_EXTRA_LIBS=
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
-SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,macos_iconv
+SPC_MICRO_PATCHES=cli_checks,disable_huge_page
 
 ; *** default build command for building php ***
 ; buildconf command
