zig toolchain stuff

--- a/config/env.ini
+++ b/config/env.ini
@@ -65,21 +65,23 @@ UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
 
 [linux]
-; Linux can use different build toolchain, but the toolchain can not be changed in this file:
-; - musl (default): used for general linux distros, can build `musl-static` target only.
-; - zig (WIP): used for general linux distros, can build `musl` and `glibc` targets.
-; - musl-native: used for alpine linux, can build `musl-static` and `musl`(WIP) target.
-; - gnu-native (assume): used for general linux distros, can build `glibc` target only and have portability issues.
+; Linux can use different build toolchains.
+; - musl (default, when SPC_LIBC=musl): used for general linux distros, can build `musl` (statically linked) only.
+; - zig (will become default): usable on all Linux distros, can build `-musl`, `arch-linux-musl -dynamic` and `arch-linux-gnu` targets. Can specify version such as `x86_64-linux-gnu.2.17`.
+; - musl-native: used for alpine linux, can build `musl` and `musl -dynamic` target.
+; - gnu-native: used for general linux distros, can build gnu target for the installed glibc version only.
 
-; build target:
-; - musl-static (default): pure static linking, using musl-libc, can run on any linux distro.
-; - musl: static linking with dynamic linking to musl-libc, can run on musl-based linux distro.
-; - glibc: static linking with dynamic linking to glibc, can run on glibc-based linux distro.
-
-; include PATH for musl libc.
+; LEGACY option to specify the target, switch to SPC_TARGET with zig toolchain instead
 SPC_LIBC=musl
-SPC_LIBC_VERSION=
-SPC_LIBC_LINKAGE=-static
+
+; Recommended: specify your target here. Zig toolchain will be used.
+; examples:
+; `native-native-gnu` - links against glibc, version 2.17
+; `native-native-gnu.2.17` - links against glibc, version 2.17
+; `native-native` - static linking against musl
+; `native-native-musl -dynamic` - links against musl libc
+; SPC_TARGET=
+
 ; compiler environments
 CC=${SPC_LINUX_DEFAULT_CC}
 CXX=${SPC_LINUX_DEFAULT_CXX}
