--- a/config/env.ini
+++ b/config/env.ini
@@ -76,9 +76,9 @@ SPC_LIBC=musl
 
 ; Recommended: specify your target here. Zig toolchain will be used.
 ; examples:
-; `native-native-gnu` - links against glibc, version 2.17
-; `native-native-gnu.2.17` - links against glibc, version 2.17
-; `native-native` - static linking against musl
+; `native-native-gnu`           - links against glibc, current OS version
+; `native-native-gnu.2.17`      - links against glibc, version 2.17
+; `native-native`               - static linking against musl
 ; `native-native-musl -dynamic` - links against musl libc
 ; SPC_TARGET=
 
