update target declaration to be correct

--- a/config/env.ini
+++ b/config/env.ini
@@ -78,8 +78,9 @@ SPC_LIBC=musl
 ; examples:
 ; `native-native-gnu`           - links against glibc, current OS version
 ; `native-native-gnu.2.17`      - links against glibc, version 2.17
-; `native-native`               - static linking against musl
-; `native-native-musl -dynamic` - links against musl libc
+; `native-native`               - links against system libc dynamically
+; `native-native-musl`          - links against musl libc statically
+; `native-native-musl -dynamic` - links against musl libc dynamically
 ; SPC_TARGET=
 
 ; compiler environments
