--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -134,7 +134,7 @@ jobs:
   build:
     name: "Build PHP Test (PHP ${{ matrix.php }} ${{ matrix.os }})"
     runs-on: ${{ matrix.os }}
-    needs: define-matrix
+    needs: [define-matrix, php-cs-fixer, phpstan, phpunit]
     timeout-minutes: 120
     strategy:
       matrix:
