make it fail again (so we can later enable tmate)

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,8 @@ jobs:
           extensions: curl, openssl, mbstring
           ini-values: memory_limit=-1
           tools: composer
+        env:
+          phpts: zts
 
       - name: "Cache Composer packages"
         id: composer-cache
