--- a/config/env.ini
+++ b/config/env.ini
@@ -63,6 +63,8 @@ PHP_SDK_PATH="${WORKING_DIR}\php-sdk-binary-tools"
 UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
+; Windows static linking system libs
+SPC_WINDOWS_EXEC_LIBS="ws2_32.lib shell32.lib"
 
 [linux]
 ; Linux can use different build toolchain, but the toolchain can not be changed in this file:
