Use SPC_EXTRA_LIBS instead of SPC_WINDOWS_EXEC_LIBS

--- a/config/env.ini
+++ b/config/env.ini
@@ -64,7 +64,7 @@ UPX_EXEC="${PKG_ROOT_PATH}\bin\upx.exe"
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=static_extensions_win32,cli_checks,disable_huge_page,vcruntime140,win32,zend_stream,cli_static
 ; Windows static linking system libs
-SPC_WINDOWS_EXEC_LIBS="ws2_32.lib shell32.lib"
+SPC_EXTRA_LIBS=""
 
 [linux]
 ; Linux can use different build toolchain, but the toolchain can not be changed in this file:
