fix: conflict upload names when reusing workflow more then once

--- a/.github/workflows/build-unix.yml
+++ b/.github/workflows/build-unix.yml
@@ -230,7 +230,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         name: "Upload License Files"
         with:
-          name: license-files
+          name: license-files-${{ inputs.php-version }}-${{ inputs.os }}
           path: buildroot/license/
       - uses: actions/upload-artifact@v4
         name: "Upload Build Metadata"
