Use spc-config instead of SPC_EXTRA_LIBS, trigger extension test

--- a/config/env.ini
+++ b/config/env.ini
@@ -89,7 +89,7 @@ LD=${SPC_LINUX_DEFAULT_LD}
 SPC_DEFAULT_C_FLAGS="-fPIC -Os"
 SPC_DEFAULT_CXX_FLAGS="-fPIC -Os"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
-SPC_EXTRA_LIBS=
+SPC_EXTRA_LIBS=""
 ; upx executable path
 UPX_EXEC=${PKG_ROOT_PATH}/bin/upx
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
@@ -119,7 +119,7 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fno-ident -fPIE 
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-ldl -lpthread -lm"
 ; EXTRA_LDFLAGS for `make` php, can use -release to set a soname for libphp.so
-SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS=""
+SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; EXTRA_LDFLAGS_PROGRAM for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 
@@ -134,7 +134,7 @@ CXX=clang++
 SPC_DEFAULT_C_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
 SPC_DEFAULT_CXX_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
 ; extra libs for building php executable, used in `make` command for building php (this value may changed by extension build process, space separated)
-SPC_EXTRA_LIBS=
+SPC_EXTRA_LIBS=""
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=cli_checks,macos_iconv
 
