--- a/config/env.ini
+++ b/config/env.ini
@@ -34,7 +34,6 @@
 ;   SPC_LINUX_DEFAULT_CXX:                  the default c++ compiler for linux. (For alpine linux: `g++`, default: `$GNU_ARCH-linux-musl-g++`)
 ;   SPC_LINUX_DEFAULT_AR:                   the default archiver for linux. (For alpine linux: `ar`, default: `$GNU_ARCH-linux-musl-ar`)
 
-
 [global]
 ; Build concurrency for make -jN, default is CPU_COUNT, this value are used in every libs.
 SPC_CONCURRENCY=${CPU_COUNT}
@@ -101,11 +100,11 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 ; configure command
 SPC_CMD_PREFIX_PHP_CONFIGURE="./configure --prefix= --with-valgrind=no --disable-shared --enable-static --disable-all --disable-cgi --disable-phpdbg --with-pic"
 ; make command
-SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
-; embed type for php, static (libphp.a) or shared (libphp.so)
-SPC_CMD_VAR_PHP_EMBED_TYPE="static"
+SPC_CMD_PREFIX_PHP_MAKE="make -j${SPC_CONCURRENCY}"
 
 ; *** default build vars for building php ***
+; embed type for php, static (libphp.a) or shared (libphp.so)
+SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 ; CFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -fPIE"
 ; CPPFLAGS for configuring php
@@ -115,13 +114,9 @@ SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; LIBS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LIBS="-ldl -lpthread -lm"
 ; EXTRA_CFLAGS for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fno-ident -fPIE ${SPC_DEFAULT_C_FLAGS}"
+SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="${SPC_DEFAULT_C_FLAGS} -g -fstack-protector-strong -fno-ident -fPIE"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-ldl -lpthread -lm"
-; EXTRA_LDFLAGS for `make` php, can use -release to set a soname for libphp.so
-SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS="-L${BUILD_LIB_PATH}"
-; EXTRA_LDFLAGS_PROGRAM for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-all-static -Wl,-O1 -pie"
 
 [macos]
 ; build target: macho or macho (possibly we could support macho-universal in the future)
@@ -144,9 +139,11 @@ SPC_CMD_PREFIX_PHP_BUILDCONF="./buildconf --force"
 ; configure command
 SPC_CMD_PREFIX_PHP_CONFIGURE="./configure --prefix= --with-valgrind=no --enable-shared=no --enable-static=yes --disable-all --disable-cgi --disable-phpdbg"
 ; make command
-SPC_CMD_PREFIX_PHP_MAKE="make -j${CPU_COUNT}"
+SPC_CMD_PREFIX_PHP_MAKE="make -j${SPC_CONCURRENCY}"
 
 ; *** default build vars for building php ***
+; embed type for php, static (libphp.a) or shared (libphp.dylib)
+SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 ; CFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -Werror=unknown-warning-option"
 ; CPPFLAGS for configuring php
@@ -154,13 +151,9 @@ SPC_CMD_VAR_PHP_CONFIGURE_CPPFLAGS="-I${BUILD_INCLUDE_PATH}"
 ; LDFLAGS for configuring php
 SPC_CMD_VAR_PHP_CONFIGURE_LDFLAGS="-L${BUILD_LIB_PATH}"
 ; EXTRA_CFLAGS for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie ${SPC_DEFAULT_C_FLAGS}"
-; EXTRA_LDFLAGS_PROGRAM for `make` php
-SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS_PROGRAM="-L${BUILD_LIB_PATH}"
+SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="${SPC_DEFAULT_C_FLAGS} -g -fstack-protector-strong -fpic -fpie"
 ; EXTRA_LIBS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_LIBS="-lresolv"
-; embed type for php, static (libphp.a) or shared (libphp.dylib)
-SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 
 [freebsd]
 ; compiler environments
