--- a/config/env.ini
+++ b/config/env.ini
@@ -124,6 +124,7 @@ CXX=clang++
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
 SPC_DEFAULT_C_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
 SPC_DEFAULT_CXX_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
+SPC_DEFAULT_LD_FLAGS=""
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=cli_checks,macos_iconv
 
