Add PHP_BUILD_PROVIDER to env.ini

--- a/config/env.ini
+++ b/config/env.ini
@@ -10,6 +10,7 @@
 ;
 ; Here's a list of env vars, these value cannot be changed anywhere:
 ;
+;   SPC_VERSION:        the version of static-php-cli.
 ;   WORKING_DIR:        the working directory of the build process. (default: `$(pwd)`)
 ;   ROOT_DIR:           the root directory of static-php-cli. (default: `/path/to/static-php-cli`, when running in phar or micro mode: `phar://path/to/spc.phar`)
 ;   BUILD_ROOT_PATH:    the root path of the build process. (default: `$(pwd)/buildroot`)
@@ -43,6 +44,8 @@ SPC_SKIP_PHP_VERSION_CHECK="no"
 SPC_SKIP_DOCTOR_CHECK_ITEMS=""
 ; extra modules that xcaddy will include in the FrankenPHP build
 SPC_CMD_VAR_FRANKENPHP_XCADDY_MODULES="--with github.com/dunglas/frankenphp/caddy --with github.com/dunglas/mercure/caddy --with github.com/dunglas/vulcain/caddy --with github.com/dunglas/caddy-cbrotli"
+; The display message for php version output (PHP >= 8.4 available)
+PHP_BUILD_PROVIDER="static-php-cli ${SPC_VERSION}"
 
 ; EXTENSION_DIR where the built php will look for extension when a .ini instructs to load them
 ; only useful for builds targeting not pure-static linking
