--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -145,6 +145,10 @@ jobs:
         os: ${{ fromJSON(needs.define-matrix.outputs.os) }}
       fail-fast: false
     steps:
+      - name: "Update runner packages"
+        if: ${{ startsWith(matrix.os, 'ubuntu-') }}
+        run: sudo apt-get update && sudo apt-get install -y ca-certificates
+
       - name: "Checkout"
         uses: actions/checkout@v4
 
