--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,6 +8,7 @@ parameters:
     - '#class Fiber#'
     - '#Attribute class JetBrains\\PhpStorm\\ArrayShape does not exist#'
     - '#Function Swoole\\Coroutine\\run not found.#'
+    - '#Static call to instance method ZM\\Logger\\ConsoleColor#'
   dynamicConstantNames:
     - PHP_OS_FAMILY
   excludePaths:
