Add docs search

--- a/.editorconfig
+++ b/.editorconfig
@@ -12,5 +12,5 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 indent_size = 2
 
-[*.{yml,yaml, vue}]
+[*.{yml,yaml,vue,ts}]
 indent_size = 2
