--- a/phpstan.neon
+++ b/phpstan.neon
@@ -9,6 +9,7 @@ parameters:
     - '#Attribute class JetBrains\\PhpStorm\\ArrayShape does not exist#'
     - '#Function Swoole\\Coroutine\\run not found.#'
     - '#Static call to instance method ZM\\Logger\\ConsoleColor#'
+    - '#Constant GNU_ARCH not found#'
   dynamicConstantNames:
     - PHP_OS_FAMILY
   excludePaths:
