--- a/config/env.ini
+++ b/config/env.ini
@@ -121,14 +121,15 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS=""
 ; build target: macho or macho (possibly we could support macho-universal in the future)
 ; Currently we do not support universal and cross-compilation for macOS.
 SPC_TARGET=native-macos
+SPC_TOOLCHAIN=SPC\\toolchain\\GccNativeToolchain
 ; compiler environments
-CC=clang
-CXX=clang++
+CC=gcc-15
+CXX=g++-15
 AR=ar
 LD=ld
 ; default compiler flags, used in CMake toolchain file, openssl and pkg-config build
-SPC_DEFAULT_C_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
-SPC_DEFAULT_CXX_FLAGS="--target=${MAC_ARCH}-apple-darwin -Os"
+SPC_DEFAULT_C_FLAGS="-Os"
+SPC_DEFAULT_CXX_FLAGS="-Os"
 SPC_DEFAULT_LD_FLAGS=""
 ; phpmicro patches, for more info, see: https://github.com/easysoft/phpmicro/tree/master/patches
 SPC_MICRO_PATCHES=cli_checks,macos_iconv
