temporary cs fix

--- a/config/env.ini
+++ b/config/env.ini
@@ -146,7 +146,7 @@ SPC_CMD_PREFIX_PHP_MAKE="make -j${SPC_CONCURRENCY}"
 ; embed type for php, static (libphp.a) or shared (libphp.dylib)
 SPC_CMD_VAR_PHP_EMBED_TYPE="static"
 ; CFLAGS for configuring php
-SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS} -Werror=unknown-warning-option"
+SPC_CMD_VAR_PHP_CONFIGURE_CFLAGS="${SPC_DEFAULT_C_FLAGS}"
 ; EXTRA_CFLAGS for `make` php
 SPC_CMD_VAR_PHP_MAKE_EXTRA_CFLAGS="-g -fstack-protector-strong -fpic -fpie ${SPC_DEFAULT_C_FLAGS}"
 
