--- a/config/env.ini
+++ b/config/env.ini
@@ -121,7 +121,7 @@ SPC_CMD_VAR_PHP_MAKE_EXTRA_LDFLAGS=""
 ; build target: macho or macho (possibly we could support macho-universal in the future)
 ; Currently we do not support universal and cross-compilation for macOS.
 SPC_TARGET=native-macos
-SPC_TOOLCHAIN=SPC\\toolchain\\GccNativeToolchain
+SPC_TOOLCHAIN=SPC\toolchain\GccNativeToolchain
 ; compiler environments
 CC=gcc-15
 CXX=g++-15
