--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -150,8 +150,8 @@ jobs:
         if: ${{ startsWith(matrix.os, 'macos-13') }}
         run: |
           curl -o cmake.tgz -#fSL https://github.com/Kitware/CMake/releases/download/v3.31.8/cmake-3.31.8-macos-universal.tar.gz
-          mkdir -p /opt/cmake
-          tar -xzf cmake.tgz -C /opt/cmake --strip-components 1
+          sudo mkdir -p /opt/cmake
+          sudo tar -xzf cmake.tgz -C /opt/cmake --strip-components 1
           echo "/opt/cmake/CMake.app/Contents/bin" >> $GITHUB_PATH
 
       - name: "Test CMake 3"
