Update env.ini docs

--- a/config/env.ini
+++ b/config/env.ini
@@ -1,40 +1,41 @@
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; static-php-cli (spc) env configuration
 ;
 ; This file is used to set default env vars for static-php-cli build.
 ; As dynamic build process, some of these vars can be overwritten by CLI options.
 ; And you can also overwrite these vars by setting them in your shell environment.
+; The value should be changed only if you know what you are doing. Otherwise, please leave them as default.
 ;
 ; We need to use some pre-defined internal env vars, like `BUILD_ROOT_PATH`, `DOWNLOAD_PATH`, etc.
-; Please note that these vars cannot be defined in this file, they are only be defined before static-php-cli running.
+; Please note that these vars cannot be defined in this file, they should only be defined before static-php-cli running.
 ;
-; Here's a list of env vars, these value cannot be changed anywhere:
+; Here's a list of env vars, these variables will be defined if not defined:
 ;
-;   SPC_VERSION:        the version of static-php-cli.
-;   WORKING_DIR:        the working directory of the build process. (default: `$(pwd)`)
-;   ROOT_DIR:           the root directory of static-php-cli. (default: `/path/to/static-php-cli`, when running in phar or micro mode: `phar://path/to/spc.phar`)
 ;   BUILD_ROOT_PATH:    the root path of the build process. (default: `$(pwd)/buildroot`)
 ;   BUILD_INCLUDE_PATH: the path of the include files. (default: `$BUILD_ROOT_PATH/include`)
 ;   BUILD_LIB_PATH:     the path of the lib files. (default: `$BUILD_ROOT_PATH/lib`)
 ;   BUILD_BIN_PATH:     the path of the bin files. (default: `$BUILD_ROOT_PATH/bin`)
-;   PKG_ROOT_PATH:      the root path of the package files. (default: `$(pwd)/pkgroot`)
+;   BUILD_MODULES_PATH: the path of the php modules (shared extensions) files. (default: `$BUILD_ROOT_PATH/modules`)
+;   PKG_ROOT_PATH:      the root path of the package files. (default: `$(pwd)/pkgroot/$GNU_ARCH-{darwin|linux|windows}`)
 ;   SOURCE_PATH:        the path of the source files. (default: `$(pwd)/source`)
 ;   DOWNLOAD_PATH:      the path of the download files. (default: `$(pwd)/downloads`)
-;   CPU_COUNT:          the count of the CPU cores. (default: `$(nproc)`)
-;   SPC_ARCH:           the arch of the current system, for some libraries needed `--host=XXX` args. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`, `arm64`)
-;   GNU_ARCH:           the GNU arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`)
-;   MAC_ARCH:           the MAC arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `arm64`)
+;   PATH:               (*nix only) static-php-cli will add `$BUILD_BIN_PATH` to PATH.
+;   PKG_CONFIG_PATH:    (*nix only) static-php-cli will set `$BUILD_LIB_PATH/pkgconfig` to PKG_CONFIG_PATH.
 ;
-;   * These vars are only be defined in Unix (macOS, Linux, FreeBSD)Builder and cannot be changed anywhere:
-;   PATH:                               static-php-cli will add `$BUILD_BIN_PATH` to PATH.
-;   PKG_CONFIG:                         static-php-cli will set `$BUILD_BIN_PATH/pkg-config` to PKG_CONFIG.
-;   PKG_CONFIG_PATH:                    static-php-cli will set `$BUILD_LIB_PATH/pkgconfig` to PKG_CONFIG_PATH.
+; Here's a list of env vars, these variables is defined in SPC and cannot be changed anywhere:
 ;
-;   * These vars are only be defined in LinuxBuilder and cannot be changed anywhere:
-;   SPC_LINUX_DEFAULT_CC:                   the default compiler for linux. (For alpine linux: `gcc`, default: `$GNU_ARCH-linux-musl-gcc`)
-;   SPC_LINUX_DEFAULT_CXX:                  the default c++ compiler for linux. (For alpine linux: `g++`, default: `$GNU_ARCH-linux-musl-g++`)
-;   SPC_LINUX_DEFAULT_AR:                   the default archiver for linux. (For alpine linux: `ar`, default: `$GNU_ARCH-linux-musl-ar`)
-;   SPC_EXTRA_PHP_VARS:                     the extra vars for building php, used in `configure` and `make` command.
+;   SPC_VERSION:            the version of static-php-cli.
+;   WORKING_DIR:            the working directory of the build process. (default: `$(pwd)`)
+;   ROOT_DIR:               the root directory of static-php-cli. (default: `/path/to/static-php-cli`, when running in phar or micro mode: `phar://path/to/spc.phar`)
+;   CPU_COUNT:              the count of the CPU cores. (default: `$(nproc)`)
+;   SPC_ARCH:               the arch of the current system, for some libraries needed `--host=XXX` args. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`, `arm64`)
+;   GNU_ARCH:               the GNU arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `aarch64`)
+;   MAC_ARCH:               the MAC arch of the current system. (default: `$(uname -m)`, e.g. `x86_64`, `arm64`)
+;   PKG_CONFIG:             (*nix only) static-php-cli will set `$BUILD_BIN_PATH/pkg-config` to PKG_CONFIG.
+;   SPC_LINUX_DEFAULT_CC:   (linux only) the default compiler for linux. (For alpine linux: `gcc`, default: `$GNU_ARCH-linux-musl-gcc`)
+;   SPC_LINUX_DEFAULT_CXX:  (linux only) the default c++ compiler for linux. (For alpine linux: `g++`, default: `$GNU_ARCH-linux-musl-g++`)
+;   SPC_LINUX_DEFAULT_AR:   (linux only) the default archiver for linux. (For alpine linux: `ar`, default: `$GNU_ARCH-linux-musl-ar`)
+;   SPC_EXTRA_PHP_VARS:     (linux only) the extra vars for building php, used in `configure` and `make` command.
 
 [global]
 ; Build concurrency for make -jN, default is CPU_COUNT, this value are used in every libs.
