Refactor test structure and update paths for improved organization

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "SPC\\Tests\\": "tests/SPC"
+            "Tests\\StaticPHP\\": "tests/StaticPHP"
         }
     },
     "bin": [
