--- a/config/artifact.yaml
+++ b/config/artifact.yaml
@@ -41,6 +41,21 @@ fastlz:
     license-files: ['LICENSE.MIT']
     license: MIT
 
+openssl:
+  source:
+    type: ghrel
+    repo: openssl/openssl
+    match: 'openssl.+\.tar\.gz'
+    prefer-stable: true
+  source-mirror:
+    type: filelist
+    url: 'https://www.openssl.org/source/'
+    regex: '/href="(?<file>openssl-(?<version>[^"]+)\.tar\.gz)"/'
+  binary: hosted
+  metadata:
+    license-files: ['LICENSE.txt']
+    license: OpenSSL
+
 zlib:
   source:
     type: ghrel
